# controllers/test_controller.go
@@ -15,7 +15,7 @@ type TestController struct {
 // @Success 200 {string} string "ok"
 // @Failure 400 {string} string "We need ID!!"
 // @Failure 404 {string} string  "Can not find ID"
-// @Router /ping [get]
+// @Router /v1/ping [get]
 func (ctrl *TestController) Ping(c *gin.Context) {
 
 	c.JSON(200, gin.H{
